[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "salsa-clrs"
version = "1.0.0"
authors = [
  { name="anonymized"},
]
description = "An extension to the CLRS package that sparsifies the algorithms and converts them to pyG datasets."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.setuptools]
packages = ["salsaclrs", "salsaclrs.algorithms"]
